--- a/PromptGenerator/MainWindow.xaml
+++ b/PromptGenerator/MainWindow.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Window
-    x:Class="WinUIExample.MainWindow"
+    x:Class="PromptGenerator.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:WinUIExample"
+    xmlns:local="using:PromptGenerator"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Window.SystemBackdrop>
@@ -18,14 +18,14 @@
         <Grid Grid.Row="0">
             <Grid ColumnDefinitions="Auto, *">
                 <Grid ColumnDefinitions="Auto, Auto">
-                    <Grid Grid.Column="0" Margin="8, 0, 0, 0" ColumnDefinitions="Auto, Auto">
+                    <!-- <Grid Grid.Column="0" Margin="8, 0, 0, 0" ColumnDefinitions="Auto, Auto">
                         <TextBlock FontSize="12" Margin="4, 11, 4, 0" Grid.Column="0" Text="自動保存" />
                         <Grid Grid.Column="1" Width="40">
                             <ToggleSwitch Toggled="AutoSave_Toggled" IsOn="False" OffContent="" OnContent="" Name="AutoSave" />
                             <TextBlock Text="有効" Visibility="Collapsed" IsHitTestVisible="False" FontSize="8" Margin="5, 14, 0, 0" Name="EnableAutoSave"/>
                             <TextBlock Text="無効" IsHitTestVisible="False" FontSize="8" Margin="18, 14, 0, 0" Name="DisableAutoSave"/>
                         </Grid>
-                    </Grid>
+                    </Grid> -->
                     <MenuBar Grid.Column="1">
                         <MenuBarItem Title="File" x:Uid="File" AccessKey="F">
                             <MenuFlyoutItem Text="Open" x:Uid="Open" Click="ClickOpen" AccessKey="O">
@@ -137,7 +137,25 @@
             </Grid>
         </Grid>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" ColumnDefinitions="*, *" ColumnSpacing="8">
+            <Grid RowDefinitions="Auto, *, Auto" Grid.Column="0">
+                <TextBox Name="Charactor" PlaceholderText="Charactor" Margin="16" x:Uid="CharactorTextBox" />
+                <ScrollViewer Grid.Row="1">
+                    <StackPanel Margin="16" Name="UIPanel" />
+                </ScrollViewer>
+                <Grid Grid.Row="2" ColumnDefinitions="*, Auto, Auto" ColumnSpacing="8" Margin="16">
+                    <TextBox Name="Prompt" TextWrapping="Wrap" AcceptsReturn="True" IsSpellCheckEnabled="True" Height="120" />
+                    <Button Grid.Column="1" VerticalAlignment="Stretch">
+                        <TextBlock Text="Copy" x:Uid="Copy" />
+                    </Button>
+                    <Button Name="GenerateButton" Grid.Column="2" VerticalAlignment="Stretch" Style="{StaticResource AccentButtonStyle}" Click="Run">
+                        <TextBlock Text="Generate" x:Uid="Generate" />
+                    </Button>
+                </Grid>
+            </Grid>
+            <Grid RowDefinitions="Auto, *" Grid.Column="1">
+                <Image Name="OutputImage" />
+            </Grid>
         </Grid>
 
         <Grid Grid.Row="2">
